New map generation algo and test page.
Exported tiles not included because 100k files and almost 2GB

--- a/docs/map.css
+++ b/docs/map.css
@@ -3,12 +3,19 @@
     Container and leaflet
 */
 body, html {
-  height: 100%;
+    height: 100%;
+    Padding: 0;
+    margin: 0;
+    border: 0;
 }
 
 
 #mapid {
-  height: 100%;
+    height: 100%;
+    Padding: 0;
+    margin: 0;
+    border: 0;
+    background: black;
 }
 
 
