Connections and geometry

--- a/docs/map.css
+++ b/docs/map.css
@@ -4,17 +4,15 @@
 */
 body, html {
     height: 100%;
-    Padding: 0;
+    padding: 0;
     margin: 0;
-    border: 0;
 }
 
 
 #mapid {
     height: 100%;
-    Padding: 0;
+    padding: 0;
     margin: 0;
-    border: 0;
     background: black;
 }
 
