--- a/docs/rw.css
+++ b/docs/rw.css
@@ -91,6 +91,7 @@
     position: relative;
     margin: 0.2em;
 }
+
     .rw-checkbox:hover {
         animation: border-blinker 0.5s linear infinite, flasher 0.3s;
         color: white;
@@ -113,22 +114,22 @@
         transition: transform 0.3s, border 0.3s;
     }
 
-        .rw-checkbox:hover::before {
-            border: 0.136em solid white;
-            transform: scaleX(1.2) scaleY(1.2);
-            color: #A9A4B288;
-        }
+    .rw-checkbox:hover::before {
+        border: 0.136em solid white;
+        transform: scaleX(1.2) scaleY(1.2);
+        color: #A9A4B288;
+    }
 
-        .rw-checkbox:active::before {
-            border: 0.136em solid white;
-            transform: scaleX(1) scaleY(1);
-            color: white;
-        }
+    .rw-checkbox:active::before {
+        border: 0.136em solid white;
+        transform: scaleX(1) scaleY(1);
+        color: white;
+    }
 
-        .rw-checkbox:checked::before {
-            border: 0.136em solid white;
-            color: white;
-        }
+    .rw-checkbox:checked::before {
+        border: 0.136em solid white;
+        color: white;
+    }
 
     .rw-checkbox + label {
         position: relative;
@@ -138,3 +139,78 @@
         user-select: none;
     }
 /* RW CHECKBOX END */
+
+/* RW RADIO START */
+.rw-radio {
+    appearance: none;
+    border-radius: 0.8em;
+    border: 0.16em solid #A9A4B200;
+    background-color: black;
+    color: #A9A4B2; /* menu lightgray */
+    width: 2.4em;
+    height: 2.4em;
+    position: relative;
+    margin: 0.2em;
+}
+
+    .rw-radio:hover {
+        animation: border-blinker 0.5s linear infinite, flasher 0.3s;
+        color: white;
+    }
+
+    .rw-radio::before { /* outline that expands */
+        content: "";
+        position: absolute;
+        top: -0.08em; /* magic numbers, please fix me im so likely to break */
+        left: -0.08em;
+        width: 100%;
+        height: 100%;
+        border-radius: inherit;
+        border: 0.14em solid #A9A4B2; /* menu lightgray */
+        transition: transform 0.3s, border 0.3s;
+    }
+
+    .rw-radio:hover::before {
+        border: 0.136em solid white;
+        transform: scaleX(1.2) scaleY(1.2);
+    }
+
+    .rw-radio:active::before {
+        border: 0.136em solid white;
+        transform: scaleX(1) scaleY(1);
+    }
+
+    .rw-radio:checked {
+        border: 0.136em solid white;
+        animation: none;
+    }
+        .rw-radio:checked::before {
+            border: 0.136em solid white;
+            transform: scaleX(1.2) scaleY(1.2);
+        }
+
+    /* inserted 50x50 image */
+    .rw-radio + img {
+        position: relative;
+        cursor: pointer;
+        opacity: 0.72;
+        bottom: -5px;
+        margin-left: -47.8px;
+        margin-right: -3px;
+        user-select: none;
+    }
+
+    .rw-radio:hover + * {
+        opacity: 1.0;
+        transform: scaleX(1.2) scaleY(1.2);
+    }
+
+    .rw-radio:active + * {
+        opacity: 1.0;
+        transform: scaleX(1) scaleY(1);
+    }
+
+    .rw-radio:checked + * {
+        opacity: 1.0;
+    }
+/* RW RADIO END */
