--- a/docs/rw.css
+++ b/docs/rw.css
@@ -36,112 +36,57 @@
     }
 }
 
-.rw-button { /* button core */
-    position: relative;
-    box-sizing: content-box;
-    border-radius: 0.8em;
-    border: 0.16em solid rgba(255,255,255,0); /* for alpha fade */
-    background-color: black;
-    color: #A9A4B2; /* menu lightgray */
-    width: 12em; /* hardcoded size, adjust transform of outline to get pretty pixels*/
-    height: 2.4em;
-    position: relative;
-    margin: 0.2em;
-}
 
-    .rw-button:hover { /* on hover,  core border blinks, core fill flashes once */
-        animation: border-blinker 0.5s linear infinite, flasher 0.3s;
-        color: white;
-    }
+/* RW UI START */
 
-        .rw-button:hover:active { /* on click, core holds max color */
-            animation: none;
-            border: 0.16em solid rgba(255,255,255,255);
-        }
-
-    .rw-button::before { /* outline that expands */
-        content: "";
-        box-sizing: content-box;
-        position: absolute;
-        top: -0.12em; /* magic numbers, please fix me im so likely to break */
-        left: -0.12em;
-        width: 100%;
-        height: 100%;
-        border-radius: inherit;
-        border: 0.16em solid #A9A4B2; /* menu lightgray */
-        transition: transform 0.3s, border 0.3s;
-    }
-
-        /* note: properly doing bump behaviour would require keyframe and then there's no easy way to have the animation play back on mouse out (requires javascript event handling it seems)*/
-        .rw-button:hover::before {
-            transform: scaleX(1.04) scaleY(1.2); /* adjust here */
-            border: 0.16em solid white;
-        }
-/* RW BUTTON END */
-/* RW CHECKBOX START */
-.rw-checkbox {
+/* BUTTON */
+button.rw-ui {
     appearance: none;
-    box-sizing: content-box;
-    border-radius: 0.8em;
-    border: 0.16em solid #A9A4B200;
-    background-color: black;
-    color: #A9A4B2; /* menu lightgray */
-    width: 2.4em;
-    height: 2.4em;
+    cursor: pointer;
     position: relative;
-    margin: 0.2em;
+    border-radius: 8px;
+    border: 2px solid #A9A4B200; /* alpha 0 for fading */
+    box-sizing: border-box; /* correctness */
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    color: #A9A4B2; /* menu lightgray */
+    transition: color 0.3s;
 }
 
-    .rw-checkbox:hover {
-        animation: border-blinker 0.5s linear infinite, flasher 0.3s;
+    button.rw-ui:hover {
+        animation: border-blinker 0.8s linear infinite, flasher 0.3s;
         color: white;
     }
 
-    .rw-checkbox::before { /* outline that expands */
-        content: "\2714";
-        text-align: center;
-        font-size: 1.6em;
-        font-weight: 600;
-        color: #A9A4B200;
-        box-sizing: content-box;
+    button.rw-ui::before { /* outline that expands */
+        content: "";
         position: absolute;
-        top: -0.08em; /* magic numbers, please fix me im so likely to break */
-        left: -0.08em;
+        left: 0;
+        top: 0;
         width: 100%;
         height: 100%;
-        border-radius: inherit;
-        border: 0.14em solid #A9A4B2; /* menu lightgray */
-        transition: transform 0.3s, border 0.3s;
+        margin: -2px; /* undo parent border */
+        border-radius: 8px;
+        border: 2px solid #A9A4B2; /* menu lightgray */
+        transition: padding 0.3s, border-color 0.3s, margin 0.3s;
     }
 
-    .rw-checkbox:hover::before {
-        border: 0.136em solid white;
-        transform: scaleX(1.2) scaleY(1.2);
-        color: #A9A4B288;
+    button.rw-ui:hover::before {
+        border-color: white;
+        padding: 4px;
+        margin: -6px;
     }
 
-    .rw-checkbox:active::before {
-        border: 0.136em solid white;
-        transform: scaleX(1) scaleY(1);
-        color: white;
+    button.rw-ui:active::before {
+        border-color: white;
+        padding: unset;
+        margin: -2px;
     }
+/* BUTTON END */
 
-    .rw-checkbox:checked::before {
-        border: 0.136em solid white;
-        color: white;
-    }
-
-    .rw-checkbox + label {
-        position: relative;
-        bottom: 0.8em;
-        left: 0.8em;
-        padding-right: 0.8em;
-        user-select: none;
-    }
-/* RW CHECKBOX END */
-
-/* RW TOGGLE START */
-.rw-toggle {
+/* TOGGLES */
+input[type='checkbox'].rw-ui, input[type='radio'].rw-ui {
     appearance: none;
     cursor: pointer;
     position: relative;
@@ -153,46 +98,21 @@
     margin: 0px;
 }
 
-    .rw-toggle:checked {
-        border-color: #A9A4B2; /* lightgray */
-    }
-
-    .rw-toggle:hover {
-        animation: border-blinker 0.5s linear infinite, flasher 0.3s;
-    }
-
-    .rw-toggle::before { /* outline that expands */
+    input[type='checkbox'].rw-ui::before, input[type='radio'].rw-ui::before { /* outline that expands */
         content: "";
         position: absolute;
         left: 0;
-        top: 0; 
+        top: 0;
         width: 100%;
         height: 100%;
         margin: -2px; /* undo parent border */
         border-radius: 8px;
         border: 2px solid #4B4653; /* darkgray */
-        transition: padding 0.3s, border 0.3s, margin 0.3s;
+        transition: padding 0.3s, border-color 0.3s, margin 0.3s;
     }
 
-    .rw-toggle:checked::before {
-        border-color: #A9A4B2; /* lightgray */
-        padding: 4px;
-        margin: -6px;
-    }
-
-    .rw-toggle:hover::before {
-        border-color: white;
-        padding: 4px;
-        margin: -6px;
-    }
-
-    .rw-toggle:active::before {
-        border-color: white;
-        padding: unset;
-        margin: -2px;
-    }
-
-    .rw-toggle + span {
+    /* inserted span */
+    input[type='checkbox'].rw-ui + span, input[type='radio'].rw-ui + span {
         cursor: pointer;
         position: absolute;
         left: 0px;
@@ -201,34 +121,93 @@
         text-align: center;
         color: #4B4653; /* darkgray */
         user-select: none;
-    }
-
-    .rw-toggle:hover + span {
-        color: #A9A4B2; /* lightgray */
-    }
-
-    .rw-toggle:active + span, .rw-toggle:checked + span {
-        color: white;
+        transition: color 0.3s;
     }
 
     /* inserted 50x50 image */
-    .rw-toggle + img {
+    input[type='checkbox'].rw-ui + img, input[type='radio'].rw-ui + img {
         position: absolute;
         cursor: pointer;
         opacity: 0.72;
         top: calc(50% - 25px);
         left: calc(50% - 25px);
         user-select: none;
+        transition: opacity 0.3s, transform 0.3s;
     }
-    .rw-toggle:checked + img {
+
+    /* checked */
+    input[type='checkbox'].rw-ui:checked::before, input[type='radio'].rw-ui:checked::before {
+        border-color: #A9A4B2; /* lightgray */
+    }
+
+    input[type='checkbox'].rw-ui:checked::after, input[type='radio'].rw-ui:checked::after { /* extra outline */
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        margin: -6px;
+        padding: 4px;
+        border-radius: 8px;
+        border: 2px solid #A9A4B2; /* lightgray */
+        transition: padding 0.3s, border-color 0.3s, margin 0.3s;
+    }
+
+    input[type='checkbox'].rw-ui:checked + span, input[type='radio'].rw-ui:checked + span {
+        color: #A9A4B2; /* lightgray */
+    }
+
+    input[type='checkbox'].rw-ui:checked + img, input[type='radio'].rw-ui:checked + img {
         opacity: 1.0;
     }
-    .rw-toggle:hover + img {
+
+    /* hover */
+    input[type='checkbox'].rw-ui:hover, input[type='radio'].rw-ui:hover {
+        animation: border-blinker 0.8s linear infinite, flasher 0.3s;
+    }
+
+    input[type='checkbox'].rw-ui:hover::before, input[type='radio'].rw-ui:hover::before {
+        margin: -6px;
+        padding: 4px;
+        border-color: white;
+    }
+
+    input[type='checkbox'].rw-ui:checked:hover::after, input[type='radio'].rw-ui:checked:hover::after {
+        margin: -10px;
+        padding: 8px;
+        border-color: white;
+    }
+
+    input[type='checkbox'].rw-ui:hover + span, input[type='radio'].rw-ui:hover + span {
+        color: white;
+    }
+
+    input[type='checkbox'].rw-ui:hover + img, input[type='radio'].rw-ui:hover + img {
         opacity: 1.0;
         transform: scaleX(1.2) scaleY(1.2);
     }
-    .rw-toggle:active + img {
-        opacity: 1.0;
-        transform: scaleX(1) scaleY(1);
+
+    /* active */
+    input[type='checkbox'].rw-ui:active, input[type='radio'].rw-ui:active {
+        animation: border-blinker 0.8s linear infinite, flasher 0.3s;
     }
-/* RW TOGGLE END */
+
+    input[type='checkbox'].rw-ui:active::before, input[type='radio'].rw-ui:active::before {
+        margin: -2px;
+        padding: 0px;
+        border-color: white;
+    }
+
+    input[type='checkbox'].rw-ui:checked:active::after, input[type='radio'].rw-ui:checked:active::after {
+        margin: -6px;
+        padding: 4px;
+        border-color: white;
+    }
+
+    input[type='checkbox'].rw-ui:active + img, input[type='radio'].rw-ui:active + img {
+        transform: none;
+    }
+
+/* RW UI END */
+
